# prune

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
completions/: _dust  _dust.ps1  dust.bash  dust.elv  dust.fish
man-page/: dust.1
src/: cli.rs  config.rs  dir_walker.rs  display.rs  main.rs  node.rs  progress.rs
src/advisor/: app_scanner.rs  cli_tools_scanner.rs  heuristics.rs  history.rs  known_paths.rs  macos.rs  ml_library.rs  mod.rs  models.rs  package_manager.rs  paths.rs  report.rs  rules.rs  safe_list.rs  scanner.rs  update_scanner.rs  user_folders.rs  version_manager.rs
src/tui/: app.rs  mod.rs
src/tui/views/: apps.rs  confirm.rs  dashboard.rs  details.rs  disk_analyzer.rs  help.rs  menu.rs  mod.rs  results.rs  scan.rs
tests/: test_exact_output.rs  test_flags.rs  tests_symlinks.rs
