[package]
name = "prune"
description = "Interactive TUI disk cleanup advisor with intelligent analysis. Identifies cache files, old dependencies, unused package managers, and AI models across macOS, Linux, and Windows."
version = "0.1.0"
authors = ["gabrielemastrapasqua <gabriele@example.com>"]
edition = "2021"
readme = "README.md"

documentation = "https://github.com/gabrielemastrapasqua/prune"
homepage = "https://github.com/gabrielemastrapasqua/prune"
repository = "https://github.com/gabrielemastrapasqua/prune"

keywords = ["du", "command-line", "disk", "disk-usage", "cleanup", "tui"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[[bin]]
name = "prune"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
lscolors = "0.21"
nu-ansi-term = "0.50"
terminal_size = "0.4"
unicode-width = "0.2"
rayon = "1"
thousands = "0.2"
stfu8 = "0.2"
regex = "1"
config-file = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
ctrlc = "3"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.27"
crossterm = "0.27"
dirs = "5.0"

[target.'cfg(not(target_has_atomic = "64"))'.dependencies]
portable-atomic = "1.4"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"
filesize = "0.2.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "=3"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_mangen = "0.2"

[[test]]
name = "integration"
path = "tests/tests.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/dust-v{ version }-{ target }{ archive-suffix }"
bin-dir = "dust-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.deb]
section = "utils"
  assets = [
    [
      "target/release/prune",
      "usr/bin/",
      "755",
    ],
    [
      "LICENSE",
      "usr/share/doc/prune/",
      "644",
    ],
    [
      "README.md",
      "usr/share/doc/prune/README",
      "644",
    ],
    [
      "man-page/prune.1",
      "usr/share/man/man1/prune.1",
      "644",
    ],
    [
      "completions/prune.bash",
      "usr/share/bash-completion/completions/prune",
      "644",
    ],
  ]
extended-description = """\
Prune is a disk cleanup advisor that gives you an instant overview of which 
directories are using disk space and tells you what to delete. It identifies 
cache files, old dependencies, unused package managers, and AI models.
"""
